view/frontend/web/css/styles.css
.bk-payment-wrap {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.bk-img-wrap {
    width: 40px;
    align-items: center;
    display: flex;
}
.bk-radio-wrap {
    flex: auto;
}

.checkout-payment-method .payment-method-title.bk-payment {
    padding: 15px;
}
@media screen and (max-width: 480px) {
    .bk-payment-wrap {
        flex-direction: row-reverse;
    }
    .bk-img-wrap {
        margin-right: 10px;
    }
}

/* ===================== Default / Overwrite Styling ============================= */

.payment-method-second-col input[type="date"] {
    background      :#ffffff;
    background-clip :padding-box;
    border          :1px solid #c2c2c2;
    border-radius   :1px;
    font-family     :'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size       :14px;
    height          :32px;
    line-height     :1.42857143;
    padding         :0 9px;
    vertical-align  :baseline;
    width           :100%;
    box-sizing      :border-box;
}

.payment-method,
.payment-method-content,
.payment-method-billing-address,
.checkout-agreements-block,
.actions-toolbar{ clear:both; }

.payment-method-second-col {
    float:left; width: 100%; margin-bottom: 20px;
}

.action.action-update {
    margin-top: 20px;
}

@media screen and (min-width: 1200px ){
    .magento-blank .label-style{
        padding: 6px 15px 0 0 !important;
        text-align: left !important;
        width: 100% !important;
        box-sizing: border-box !important;
        float: left !important;
    }

    .payment-method-content {
        width: 100%; box-sizing:border-box;
    }

    .magento-blank .payment-method-billing-address {
        margin-top: 6px;
    }

    .buckaroo_magento2_ideal .payment-method-second-col,
    .buckaroo_magento2_idealprocessing .payment-method-second-col,
    .buckaroo_magento2_creditcard .payment-method-second-col,
    .buckaroo_magento2_creditcards .payment-method-second-col,
    .buckaroo_magento2_transfer .payment-method-second-col,
    .buckaroo_magento2_afterpay .payment-method-second-col,
    .buckaroo_magento2_afterpay2 .payment-method-second-col,
    .buckaroo_magento2_afterpay20 .payment-method-second-col,
    .buckaroo_magento2_billink .payment-method-second-col,
    .buckaroo_magento2_sepadirectdebit .payment-method-second-col,
    .buckaroo_magento2_giropay .payment-method-second-col,
    .buckaroo_magento2_payperemail .payment-method-second-col,
    .buckaroo_magento2_klarna .payment-method-second-col,
    .buckaroo_magento2_klarnakp .payment-method-second-col,
    .buckaroo_magento2_klarnain .payment-method-second-col,
    .buckaroo_magento2_emandate .payment-method-second-col,
    .buckaroo_magento2_applepay .payment-method-second-col,
    .buckaroo_magento2_capayablein3 .payment-method-second-col,
    .buckaroo_magento2_capayablepostpay .payment-method-second-col,
    .buckaroo_magento2_tinka .payment-method-second-col,
    .buckaroo_magento2_mrcash .payment-method-second-col,
    .buckaroo_magento2_voucher .payment-method-second-col
    {
        float:left;
        width: 50%;
        padding-right: 5%;
        box-sizing: border-box;
    }

    .buckaroo_magento2_ideal .payment-method-billing-address,
    .buckaroo_magento2_idealprocessing .payment-method-billing-address,
    .buckaroo_magento2_creditcard .payment-method-billing-address,
    .buckaroo_magento2_creditcards .payment-method-billing-address,
    .buckaroo_magento2_transfer .payment-method-billing-address,
    .buckaroo_magento2_afterpay .payment-method-billing-address,
    .buckaroo_magento2_afterpay2 .payment-method-billing-address,
    .buckaroo_magento2_afterpay20 .payment-method-billing-address,
    .buckaroo_magento2_billink .payment-method-billing-address,
    .buckaroo_magento2_sepadirectdebit .payment-method-billing-address,
    .buckaroo_magento2_giropay .payment-method-billing-address,
    .buckaroo_magento2_payperemail .payment-method-billing-address,
    .buckaroo_magento2_klarna .payment-method-billing-address,
    .buckaroo_magento2_klarnakp .payment-method-billing-address,
    .buckaroo_magento2_klarnain .payment-method-billing-address,
    .buckaroo_magento2_emandate .payment-method-billing-address,
    .buckaroo_magento2_applepay .payment-method-billing-address,
    .buckaroo_magento2_capayablein3 .payment-method-billing-address,
    .buckaroo_magento2_capayablepostpay .payment-method-billing-address,
    .buckaroo_magento2_tinka .payment-method-billing-address,
    .buckaroo_magento2_mrcash .payment-method-billing-address,
    .buckaroo_magento2_voucher .payment-method-billing-address
    {
        float:left;
        width: 50%;
        padding-right: 5%;
        box-sizing: border-box;
        clear:none;
    }
}
/* ... */

